format[service]: format code style